Migration to GWT-2.5.0 / lib-gwt-svg-0.5.7-SNAPSHOT / lib-gwt-file-0.3.2-SNAPSHOT

--- a/src/main/webapp/svgreal.html
+++ b/src/main/webapp/svgreal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=Edge" >
 <link rel="stylesheet" type="text/css" href="org.vectomatic.svg.edit.svgreal/resources/css/gxt-all.css" />
 <link type="text/css" rel="stylesheet" href="svgreal.css"></link>
 <script type="text/javascript" src="org.vectomatic.svg.edit.svgreal/org.vectomatic.svg.edit.svgreal.nocache.js"></script>
