--- a/src/main/webapp/svgreal.html
+++ b/src/main/webapp/svgreal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset='utf-8'>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" >
 <link rel="stylesheet" type="text/css" href="org.vectomatic.svg.edit.svgreal/resources/css/gxt-all.css" />
 <link type="text/css" rel="stylesheet" href="svgreal.css"></link>
